apps/lubelogger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
  namespace: lubelogger
  labels:
    app: lubelogger
spec:
  type: ClusterIP
  selector:
    app: lubelogger
    app.kubernetes.io/name: lubelogger
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
